images: set to 100% max width, prevent overflow

--- a/src/scss/_root.scss
+++ b/src/scss/_root.scss
@@ -37,8 +37,9 @@ a.download > code.download {
  */
  img {
     margin: 14px 0px;
+    max-width: 100%;
  }
- 
+
 
 
 /*
